<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Real Estate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back_to">Go back to</string>
    <string name="sign_up">Sign UP</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="close">close</string>
    <string name="price">Enter price here. It is not mandatory, would be grate for customer for initial price</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="MAPS_API_KEY">AIzaSyDqryKj9a0-liHqZAP2J8algo9Jt8B_iww</string>
</resources>